@@ -1,3 +1,9 @@
+2008-02-26  Christian Kellner  <gicmo@gnome.org>
+
+	* daemon/gvfsbackenddav.c:
+	Redo authentication and implement keyring support. Based
+	on a patch by Carlos Garcia Campos.
+
 2008-02-26  Alexander Larsson  <alexl@redhat.com>
 
         * programs/gvfs-bash-completion.sh:
